--- a/3/3.md
+++ b/3/3.md
@@ -6,4 +6,4 @@
 截至2024年年底，人口超过千万的17个城市分别是：重庆、上海、北京、成都、广州、深圳、武汉、天津、西安、苏州、郑州、杭州、石家庄、临沂、东莞、长沙、青岛。
 （来源：澎湃新闻）
 
-![合肥市常住人口破千万](3.webp)
+![合肥市常住人口破千万](https://github.com/naughtyJun/book/blob/main/3/3.png)
