--- a/1/国足，被“抬进”世界杯？.md
+++ b/1/国足，被“抬进”世界杯？.md
@@ -8,7 +8,7 @@
 
 球迷们在社交媒体上表示。
 
-![国足被抬进世界杯](https://github.com/naughtyJun/book/blob/main/1/1.webpp)
+![国足被抬进世界杯](https://raw.githubusercontent.com/naughtyJun/book/refs/heads/main/1/1.webp)
 
 
 
