--- a/2/苏州再发楼市新政.md
+++ b/2/苏州再发楼市新政.md
@@ -2,7 +2,7 @@
 
 3月10日，苏州官方发布消息，当地住建局和金融部门出台了“三低一宽”房贷政策，叠加人才房票政策，进一步降低购房门槛，助力青年人、新市民购房置业。上海易居房地产研究院副院长严跃进向证券时报·e公司记者表示，此次“三低一宽”政策创新性强、亮点多、示范效应明显，“此次苏州打响了降低月供第一枪，‘月供仅需100元’的政策具有很大吸引力。”
 
-![苏州楼市新政](https://github.com/naughtyJun/book/blob/main/2/2.jpeg)
+![苏州楼市新政](https://raw.githubusercontent.com/naughtyJun/book/refs/heads/main/2/2.jpeg)
 
 所谓“三低一宽”，指的是低首付、低利息、低月供、宽期限。具体来看：
 
